# datacube-guide

./: .codespellrc  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml
benchmarking-notebooks/titiler-cmr/: benchmark-tiles.ipynb  compatibility.ipynb  test-netcdf4-datasets.ipynb
benchmarking-notebooks/titiler-cmr/output/: cmr_collections_netcdf4_updated_saved_all.csv  compatibility_report_netcdf4_2025-10-06_10-04-53.csv
bloated-datatypes/: index.html
data/test_dataset_default.zarr/: zarr.json
data/test_dataset_default.zarr/data/: zarr.json
data/test_dataset_default.zarr/data/c/0/0/: 0  1  2  3
data/test_dataset_default.zarr/data/c/0/1/: 0  1  2  3
data/test_dataset_default.zarr/data/c/1/0/: 0  1  2  3
data/test_dataset_default.zarr/data/c/1/1/: 0  1  2  3
data/test_dataset_default.zarr/data/c/2/0/: 0  1  2  3
data/test_dataset_default.zarr/data/c/2/1/: 0  1  2  3
data/test_dataset_default.zarr/data/c/3/0/: 0  1  2  3
data/test_dataset_default.zarr/data/c/3/1/: 0  1  2  3
data/test_dataset_default.zarr/latitude/: zarr.json
data/test_dataset_default.zarr/latitude/c/: 0
data/test_dataset_default.zarr/longitude/: zarr.json
data/test_dataset_default.zarr/longitude/c/: 0
data/test_dataset_default.zarr/time/: zarr.json
data/test_dataset_default.zarr/time/c/: 0
datacube-benchmark/api/: index.html
dispersed-metadata/: index.html
docs/: _quarto.yml  bloated-datatypes.ipynb  dispersed-metadata.ipynb  gdal-defaults.md  index.md  index.qmd  massive-chunks.ipynb  non-standardized-metadata.ipynb  related.md  tiny-chunks.ipynb  tiny-coordinate-chunks.ipynb  titiler-cmr-compat.ipynb  xarray-combine-defaults.md
docs/api-reference/: datacube-benchmark.md  titiler-benchmark.md
docs/api-reference/titiler/: index.md  titiler-cmr.md
docs/datacube-benchmark/: api.md  titiler.md
docs/explanation/: titiler-ecosystem.md
docs/notebooks/: reprs.ipynb
docs/notebooks/production/: chunks-too-large.ipynb  chunks-too-small.ipynb  confusing-metadata.ipynb  datatype-bloat.ipynb  dispersed-metadata.ipynb  tiny-coordinate-chunks.ipynb
docs/notebooks/usage/: default-fsspec-caching.ipynb  default-gdal-config.ipynb  default-xarray-combine.ipynb  old-libraries.ipynb
docs/titiler-cmr/: titiler-cmr-benchmark.ipynb  titiler-cmr-statistics-benchmark.ipynb
docs/visualization/: browzarr.md  carbonplan-maps.md  deck.gl-raster.md  ecosystem-comparison.md  numeric-data-layer.md  overview.md  xpublish-tiles.md  zarr-cesium.md  zarr-gl.md  zarr-layer.md
docs/visualization/titiler/: overview.md
docs/visualization/titiler/apis/: titiler-core.md  titiler-multidim.md
docs/visualization/titiler/titiler-cmr/: benchmark-stats.ipynb  benchmark-tiles.ipynb  compatibility.ipynb  find-netcdf4-datasets.ipynb  summarize-netcdf4-results.ipynb  test-netcdf4-datasets.ipynb  titiler-cmr-benchmark.ipynb  titiler-cmr-compatibility.ipynb  titiler-cmr-statistics-benchmark.ipynb
docs/visualization/titiler/titiler-cmr/output/: cmr_collections_netcdf4.csv  cmr_collections_netcdf4_updated_saved_all.csv
docs/visualization/titiler/titiler-cmr/titiler-cmr-all/: 01-concept_var_finder.ipynb  02-compat_runner.ipynb
docs/visualization/xpublish/: overview.md
docs/worst-practices/: dispersed-metadata.ipynb  fsspec-caching-defaults.md  massive-chunks.ipynb  old-libraries.md  tiny-chunks.ipynb  tiny-coordinate-chunks.ipynb
fsspec-caching-defaults/: index.html
gdal-defaults/: index.html
massive-chunks/: index.html
non-standardized-metadata/: index.html
old-libraries/: index.html
search/: search_index.json
src/datacube_practices/: __init__.py  generation.py
tests/: test_generation.py
tiny-chunks/: index.html
tiny-coordinate-chunks/: index.html
xarray-combine-defaults/: index.html
(+8 files in other folders)
