[project]
name = "datacube-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datacube-benchmark",
    "hvplot>=0.11.3",
    "matplotlib>=3.10.3",
]

[tool.uv.sources]
datacube_benchmark = { workspace = true }
zarr = { git = "https://github.com/zarr-developers/zarr-python" }

[tool.uv.workspace]
members = ["packages/*"]

[tool.numpydoc_validation]
# See https://numpydoc.readthedocs.io/en/latest/validation.html#built-in-validation-checks for list of checks
checks = [
    "GL06",
    "GL07",
    # Currently broken; see https://github.com/numpy/numpydoc/issues/573
    # "GL09",
    "GL10",
    "SS02",
    "SS04",
    "PR02",
    "PR03",
    "PR05",
    "PR06",
]

[tool.uv]
dev-dependencies = [
    "aiohttp-retry>=2.9.1",
    "aiohttp>=3.11.13",
    "azure-identity>=1.21.0",
    "boto3>=1.38.21",
    "fsspec>=2024.10.0",
    "ipykernel>=6.29.5",
    "mike>=2.1.3",
    "mkdocs-material[imaging]>=9.6.3",
    "mkdocs-redirects>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.13.0",
    "mkdocstrings>=0.27.0",
    "markdown-exec[ansi]",
    "moto[s3,server]>=5.1.1",
    "mypy>=1.15.0",
    "pip>=24.2",
    "pytest-asyncio>=0.24.0",
    "pytest-mypy-plugins>=3.2.0",
    "pytest>=8.3.3",
    "ruff>=0.12.0",
]

[tool.mypy]
files = ["packages/datacube-benchmark/src/datacube_benchmark"]
